--- a/exercises/stats/Type1afit.ipynb
+++ b/exercises/stats/Type1afit.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RooFit Tutorial: Fit Cosmological Models to Type 1a Supernova Data\n",
+    "# Fit of Cosmological Models to Type 1a Supernova Data\n",
     "### Created:  Summer 2017 Harrison B. Prosper\n",
     "#### Updated: 25 June 2018, ESHEP 18, Maratea, Italy\n",
     "## Introduction\n",
     "\n",
-    "In this tutorial, I show how to use the CERN function minimization package Minuit, created by CERN Scientist Dr. Fred James and released with the CERN data analysis package __[ROOT](http://root.cern.ch)__. We perform simple fits of cosmological models to Type 1a supernova data. However, we shall not use the Minuit interface directly, but the RooFit interface to it. (See exercise 00.1_roofit.ipynb for an introduction.) \n",
+    "In this tutorial, I show how to use the CERN function minimization package Minuit, created by CERN Scientist Dr. Fred James and released with the CERN data analysis package __[ROOT](http://root.cern.ch)__. We perform simple fits of cosmological models to Type 1a supernova data. However, we shall not use the Minuit interface directly, but the __RooFit__ interface to it. (See exercise 00.1_roofit.ipynb for an introduction.) \n",
     "\n",
     "For completeness, I start with a bit of background to this problem.\n",
     "\n",
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
     "    scribe.write(\"http://supernova.lbl.gov/Union/figures\")\n",
     "    scribe.write(\"\")\n",
     "    scribe.write(\"#mu = 5 log_{10}d_{L}(z) + C, d_{L} = (1+z)r\")    \n",
-    "    c.SaveAs('.pdf')\n",
+    "    c.SaveAs('.png')\n",
     "    c.Draw()\n",
     "\n",
     "    return g "
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Info in <TCanvas::Print>: pdf file ./fig_data.pdf has been created\n"
+      "Warning in <TCanvas::Constructor>: Deleting canvas with same name: fig_data\n",
+      "Info in <TCanvas::Print>: png file ./fig_data.png has been created\n"
      ]
     },
     {
@@ -685,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +879,7 @@
      "output_type": "stream",
      "text": [
       "performing fit...\n",
-      "real time:      3.082 s\n",
+      "real time:      2.951 s\n",
       "================================================================================\n",
       "\n",
       "  RooFitResult: minimized FCN value: 1444.78, estimated distance to minimum: 4.4706e-05\n",
@@ -907,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
